@@ -1,3 +1,7 @@
+2006-10-12  Brian Bidulock  <bidulock@openss7.org>
+
+	* include/sys/LiS/genconf.h.in: added some header file defines
+
 2006-10-10  Brian Bidulock  <bidulock@openss7.org>
 
 	* ChangeLog: updates for release
